[package]
name = "relambda"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
description = "A bytecode-compiling Unlambda 2.0 intepreter"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
unicode_reader = "1.0"
log = "0.4.8"
stderrlog = "0.4.1"

[dev-dependencies]
lazy_static = "1.4.0"
